<resources>
    <string name="app_name">Women Safety</string>
    <string name="_2020">2020</string>
    <string name="todo">TODO</string>
    <string name="_2021">2021</string>
    <string name="all_rights_reserved">All Rights Reserved</string>
    <string name="enter_number">Enter Number</string>
    <string name="list">List</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="x">X</string>
    <string name="textview">TextView</string>
    <string name="emergency_alert">Emergency Alert!</string>
    <string name="title_activity_maps">MapsActivity</string>


</resources>